@@ -1,5 +1,8 @@
 2022-04-12  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
 
+	* 49996 (Peter) + 50012: Test/README, Test/ztst.zsh: add
+	ZTST_continue to continue tests after a failure
+
 	* 50017: Completion/Unix/Type/_time_zone: allow lowercase to
 	match with uppercase
 
